Intergrate AWS S3 storage